@@ -12,6 +12,7 @@
  397409 remove unneeded temporary objects from Quark::to_view()
  398074 free memory read on socket error
  396523 fix minor compiler warnings
+ 390735 prompt for save path if none specified when adding a nzb via command-line.
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
